# stock_market_pred

./: .gitignore  ftjob.ipynb  hello.py  ift_dataset.py  ift_stock.py  pyproject.toml
stocks/: chatbot.py  fine-tune.py  test_dataset.jsonl
